Update index.html add dist.zip

--- a/izlite/index.html
+++ b/izlite/index.html
@@ -46,6 +46,20 @@
                   <a href="izlite-4.2.0-SNAPSHOT-jar-with-dependencies.jar"> Télécharger</a>
                 </div>
               </div>
+
+
+             <div >
+                <div class="col-lg">
+                  dist-izlite4.2.0.zip
+                </div>
+                <div class="col-lg">
+                  <a href="dist-izlite4.2.0.zip"> Télécharger</a>
+                </div>
+              </div>
+
+
+
+      
 <p> </p>
 
 <h3><a href="https://izldev.github.io/">retour</a></h3>
