--- a/izlite/index.html
+++ b/izlite/index.html
@@ -50,13 +50,22 @@
 
              <div >
                 <div class="col-lg">
-                  dist-izlite4.2.0.zip
+                  dist-izlite4.2.0.zip  (obsolete)
                 </div>
                 <div class="col-lg">
                   <a href="dist-izlite4.2.0.zip"> Télécharger</a>
                 </div>
               </div>
 
+
+             <div >
+                <div class="col-lg">
+                  New: izlite-4.2.0-mydist.zip
+                </div>
+                <div class="col-lg">
+                  <a href="izlite-4.2.0-mydist.zip"> Télécharger</a>
+                </div>
+              </div>
 
 
       
